[package]
name = "merkle-benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4.0"
fuel-crypto = "0.27.0"
fuel-types = "0.27.0"
fuel-merkle = "0.27.0"

[[bench]]
name = "code_root"
harness = false